--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 </script>
 <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=5592892280797460&ev=PageView&noscript=1"
+  src="https://www.facebook.com/tr?id=2184694001701735&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 
